Fixing footer spacing problems

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,5 +4,5 @@
 }
 
 .app__inner-container {
-  padding-bottom: 6rem; // Footer height
+  padding-bottom: 8rem; // Footer height
 }
