--- a/src/components/education/EducationItem.scss
+++ b/src/components/education/EducationItem.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   background-color: $blue-item;
   border-radius: $border-radius;
-  margin-bottom: 2rem;
   padding: 2rem;
 }
 
