--- a/src/components/education/EducationItemContainer.scss
+++ b/src/components/education/EducationItemContainer.scss
@@ -1,4 +1,5 @@
 .education-item-container {
   display: flex;
   flex-direction: column;
+  row-gap: 2rem;
 }
