--- a/src/components/layout/Footer.scss
+++ b/src/components/layout/Footer.scss
@@ -5,7 +5,6 @@
   bottom: 0;
   width: 100%;
   height: 6rem;            
-  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
