--- a/src/components/timeline/Timeline.scss
+++ b/src/components/timeline/Timeline.scss
@@ -65,7 +65,6 @@ header {
 // Timeline
 #timeline {
   width: 100%;
-  margin: 30px auto;
   position: relative;
   padding: 0 10px;
   @include prefix(transition, all 0.4s ease);
